FIX like section text alignment on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,10 @@ h1 {
   align-items: center;
 }
 
+.likes > * {
+  text-align: center;
+}
+
 .like-button {
   display: inline-block;
   padding: 16px;
